Made the navbar appear and dissapear on scroll.  Fixed a bunch of other stuff, got entire site looking good on mobile.

--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -5,16 +5,28 @@ body {
 }
 
 .mainContentSpacing {
-    padding-top:50px;
+    padding-top:200px;
     padding-bottom: 50px;
 }
 
-.customNavbar {
+#customNavbar {
+    
+    width: 100%;
+    padding-right: 20%;
+    padding-left: 20%;
+    margin-right: auto;
+    margin-left: auto;
+
+
+    background-color: black;
     padding-top: 30px;
-    padding-bottom: 100px;
+    padding-bottom: 10px;
+    position: fixed;
+    top: 0;
+    transition: top 0.3s; /* Transition effect when sliding down (and up) */
 }
 
-.info {
+#info {
     padding-top: 100px;
     padding-bottom: 100px;
     width: 100%;
@@ -24,11 +36,11 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 5px;
-    opacity: .9;
+    opacity: .85;
     transition: .5s;
 }
 
-    .info:hover {
+    #info:hover {
         opacity:1;
     }
 
@@ -104,7 +116,7 @@ body {
 
     #flyoutMenu.show {
         transform: translate3d(0vw, 0, 0);
-        position: relative; /*Sticky fixes it but causes position bug*/
+        position: fixed; /*Sticky fixes it but causes position bug*/
     }
 
 .navElement {
@@ -149,7 +161,7 @@ body {
 
 /*Contact Footer*/
 .contactFooter {
-    text-align: center;
+    text-align:center;
     padding-top: 100px;
     padding-bottom: 200px;
 }
@@ -233,3 +245,29 @@ body {
     text-align: right;
 }
 
+
+
+/*All styling for collaps on small screen*/
+@media screen and (max-width:1000px) {
+
+
+    #customNavbar {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+
+
+    /*Used to center and adjust info*/
+    .row {
+        display: inline-block;
+    }
+
+    .infoPic {
+        padding-top: 50px;
+        text-align:center;
+    }
+
+    #info {
+        height: 800px;
+    }
+}
